Bug 1709542 - Allow accessing private fields and acessor methods inside of Debugger.Frame.eval r=arai

Differential Revision: https://phabricator.services.mozilla.com/D114548